Add delete button. Multiple suggested fixes